--- a/Load Pages/upload.html
+++ b/Load Pages/upload.html
@@ -64,21 +64,30 @@
 
     <div class="mx-5 mt-3 mb-4 d-flex justify-content-between">
       <div class="d-flex">
-        <button id="upload" type="button" class="p-2 px-3 btn btn-light barlow-regular">
+        <input type="file" id="upload-file">
+        <label for="upload-file" id="upload" class="p-2 px-3 btn btn-light barlow-regular">
           <span class="pe-2"><i class="bi bi-upload"></i></span>
           Upload Load Plan File
-        </button>
+        </label>
   
-        <button id="upload" type="button" class="mx-3 p-2 px-3 btn btn-light barlow-regular">
+        <button id="upload" data-bs-toggle="modal" data-bs-target="#filter-options" class="mx-3 p-2 px-3 btn btn-light barlow-regular">
           <span class="pe-1"><i class="bi bi-funnel"></i></span>
           Filter Options
         </button>
       </div>
+
+      <div class="d-flex">
+        <button id="upload" data-bs-toggle="modal" data-bs-target="#apply-changes" type="button" class="me-3 p-2 px-3 btn btn-light barlow-regular">
+          <span class="pe-1"><i class="bi bi-check2-square"></i></span>
+          Apply Changes
+        </button>
+  
+        <button id="upload" type="button" class="me-3 p-2 px-3 btn btn-light barlow-regular">
+          <span class="pe-1"><i class="bi bi-download"></i></span>
+          Download File
+        </button>
+      </div>
       
-      <button id="upload" type="button" class="mx-3 p-2 px-3 btn btn-light barlow-regular">
-        <span class="pe-1"><i class="bi bi-check2-square"></i></span>
-        Apply Changes
-      </button>
     </div>
 
     <div class="d-flex">
@@ -238,11 +247,72 @@
         </table>
       </div>  
     </div>
+
+    <div id="filter-options" class="modal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-dark">
+          <div class="modal-header">
+            <h5 class="text-white modal-title">Filter Options</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-3 d-flex">
+              <div class="me-auto d-sm-flex justify-content-sm-end align-items-center">
+                <div class="mb-2 mb-sm-0 me-sm-2">
+                  <button id="filter-btn" type="button" class="btn btn-primary" data-bs-toggle="button">Sort by Customer Name</button>
+                </div>
+                <div class="mb-2 mb-sm-0 me-sm-2">
+                  <select class="form-select">
+                    <option value="alphabeticalOrderSelect1" selected>A-to-Z</option>
+                    <option value="alphabeticalOrderSelect2">Z-to-A</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+
+            <div class="mb-3 d-flex">
+              <div class="me-auto d-sm-flex justify-content-sm-end align-items-center">
+                <div class="mb-2 mb-sm-0 me-sm-2">
+                  <button id="filter-btn" type="button" class="btn btn-primary" data-bs-toggle="button">Sort by Load Time</button>
+                </div>
+
+                <div class="mb-2 mb-sm-0 me-sm-2">
+                  <select class="form-select">
+                    <option value="alphabeticalOrderSelect1" selected>Highest to Lowest</option>
+                    <option value="alphabeticalOrderSelect2">Lowest to Highest</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer border-0">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="apply-changes" class="modal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content bg-dark">
+          <div class="modal-header border-0">
+            <h5 class="modal-title text-light">Are you sure you want to apply changes?</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
     
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="./script.js"></script>
   </body>
 </html>
