--- a/MyApp/src/Load Plan/upload.html
+++ b/MyApp/src/Load Plan/upload.html
@@ -15,49 +15,22 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
 
+     <!-- Include this for navbar -->
+    <script>
+      function loadNavbar() {
+          fetch('/MyApp/assets/navbar/navbar.html')
+              .then(response => response.text())
+              .then(data => {
+                  document.getElementById('navbar').innerHTML = data;
+              });
+      }
+      window.onload = loadNavbar;
+    </script>
+
     <title>Upload Load Plan</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="d-flex container-fluid">
-        <div class="d-flex align-items-center">
-          <a class="navbar-brand" href="#">
-            <img class="me-2" width="57" height="55" src="../assets/logo.png">
-          </a>
-
-          <div class="grid gap-0 row-gap-0">
-            <div class="g-col-6">
-              <span class="navtitle krona-one-regular">PRODUCERS CONNECTION LOGISTICS INC.</span>
-            </div>
-            <div class="text-start g-col-6">
-              <span id="subnav">Load Planning Site</span>
-            </div>
-          </div>
-        </div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Load Plan</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">KPI</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Register</a>
-            </li>
-        </div>
-      </div>
-    </nav>
-
+    <nav id="navbar"></nav>
     <div class="mx-5 d-flex mt-5">
       <span id="loadplan" class="text-start krona-one-regular">Load Plan</span>
     </div>
