--- a/MyApp/assets/navbar/navbar.html
+++ b/MyApp/assets/navbar/navbar.html
@@ -68,7 +68,7 @@ body {
   <div class="d-flex container-fluid">
     <div class="d-flex align-items-center">
       <a class="navbar-brand" href="#">
-        <img class="ms-2" width="57" height="55" src="/MyApp/assets/navbar/logo.png">
+        <img class="ms-2" width="57" height="55" src="../../../MyApp/assets/navbar/logo.png">
       </a>
 
       <div class="grid gap-0 row-gap-0">
@@ -87,19 +87,19 @@ body {
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Home</a>
+          <a class="nav-link" aria-current="page" href="../../src/Home/home.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/MyApp/src/Load Plan/upload.html">Load Plan</a>
+          <a class="nav-link" href="../../../MyApp/src/Load Plan/upload.html">Load Plan</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">KPI</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
+          <a class="nav-link" href="../../src/Login/login.html">Sign In</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/MyApp/src/Register/register.html">Register</a>
+          <a class="nav-link" href="../../../MyApp/src/Register/register.html">Register</a>
         </li>
     </div>
   </div>
