--- a/MyApp/src/Load Plan/upload.html
+++ b/MyApp/src/Load Plan/upload.html
@@ -18,7 +18,7 @@
      <!-- Include this for navbar -->
     <script>
       function loadNavbar() {
-          fetch('/MyApp/assets/navbar/navbar.html')
+          fetch('../../assets/navbar/navbar.html')
               .then(response => response.text())
               .then(data => {
                   document.getElementById('navbar').innerHTML = data;
@@ -27,35 +27,40 @@
       window.onload = loadNavbar;
     </script>
 
-    <title>Upload Load Plan</title>
+    <title>Load Plan Menu</title>
   </head>
   <body>
-    <nav id="navbar"></nav>
+    <div style="position: sticky; top: 0" id="navbar"></div>
     <div class="mx-5 d-flex mt-5">
-      <span id="loadplan" class="text-start krona-one-regular">Load Plan</span>
+      <span id="loadplan" class="text-start krona-one-regular">View Load Plan</span>
     </div>
 
     <div class="mx-5 mt-3 mb-4 d-flex justify-content-between">
-      <div class="d-flex">
+      <div class="d-flex justify-content-start">
         <input type="file" id="upload-file">
-        <label for="upload-file" id="upload" class="p-2 px-3 btn btn-light barlow-regular">
+        <label for="upload-file" id="options" class="p-2 px-3 btn btn-light barlow-regular">
           <span class="pe-2"><i class="bi bi-upload"></i></span>
           Upload Load Plan File
         </label>
   
-        <button id="upload" data-bs-toggle="modal" data-bs-target="#filter-options" class="mx-3 p-2 px-3 btn btn-light barlow-regular">
+        <button id="options" data-bs-toggle="modal" data-bs-target="#filter-options" class="mx-3 p-2 px-3 btn btn-light barlow-regular">
           <span class="pe-1"><i class="bi bi-funnel"></i></span>
           Filter Options
         </button>
+
+        <button id="options" class="p-2 px-3 btn btn-light barlow-regular">
+          <span class="pe-1"><i class="bi bi-pencil-square"></i></span>
+          Edit Load Plan
+        </button>
       </div>
 
-      <div class="d-flex">
-        <button id="upload" data-bs-toggle="modal" data-bs-target="#apply-changes" type="button" class="me-3 p-2 px-3 btn btn-light barlow-regular">
+      <div class="d-flex justify-content-end">
+        <button id="options" data-bs-toggle="modal" data-bs-target="#apply-changes" type="button" class="me-3 p-2 px-3 btn btn-light barlow-regular">
           <span class="pe-1"><i class="bi bi-check2-square"></i></span>
           Apply Changes
         </button>
   
-        <button id="upload" type="button" class="me-3 p-2 px-3 btn btn-light barlow-regular">
+        <button id="options" type="button" class="p-2 px-3 btn btn-light barlow-regular">
           <span class="pe-1"><i class="bi bi-download"></i></span>
           Download File
         </button>
@@ -63,8 +68,8 @@
       
     </div>
 
-    <div class="d-flex">
-      <div style="height:450px; max-height:450px; overflow-y: auto;" class="mx-5 rounded-2 bg-light table-responsive">
+    <div class="d-flex justify-content-center">
+      <div style="width: 100%; height:450px; max-height:450px; overflow-y: auto;" class="mx-5 rounded-2 bg-light table-responsive">
         <table style="max-height: 1rem;" class="table align-middle text-center table-hover table-bordered">
           <thead class="barlow-regular align-middle table-dark">
             <tr>
@@ -89,9 +94,6 @@
             <tr>
               <td colspan="2">
                 <div class="px-1 d-flex justify-content-center">
-                  <a class="edit-btn me-3" href="#">
-                    <i class="bi bi-pencil-square"></i>
-                  </a>
                   <a class="delete-btn" href="#">
                     <i class="bi bi-x-square"></i>
                   </a>
@@ -115,9 +117,6 @@
             <tr>
               <td colspan="2">
                 <div class="px-1 d-flex justify-content-center">
-                  <a class="edit-btn me-3" href="#">
-                    <i class="bi bi-pencil-square"></i>
-                  </a>
                   <a class="delete-btn" href="#">
                     <i class="bi bi-x-square"></i>
                   </a>
@@ -141,9 +140,6 @@
             <tr>
               <td colspan="2">
                 <div class="px-1 d-flex justify-content-center">
-                  <a class="edit-btn me-3" href="#">
-                    <i class="bi bi-pencil-square"></i>
-                  </a>
                   <a class="delete-btn" href="#">
                     <i class="bi bi-x-square"></i>
                   </a>
@@ -167,9 +163,6 @@
             <tr>
               <td colspan="2">
                 <div class="px-1 d-flex justify-content-center">
-                  <a class="edit-btn me-3" href="#">
-                    <i class="bi bi-pencil-square"></i>
-                  </a>
                   <a class="delete-btn" href="#">
                     <i class="bi bi-x-square"></i>
                   </a>
@@ -193,9 +186,6 @@
             <tr>
               <td colspan="2">
                 <div class="px-1 d-flex justify-content-center">
-                  <a class="edit-btn me-3" href="#">
-                    <i class="bi bi-pencil-square"></i>
-                  </a>
                   <a class="delete-btn" href="#">
                     <i class="bi bi-x-square"></i>
                   </a>
