--- a/MyApp/src/Login/login.html
+++ b/MyApp/src/Login/login.html
@@ -39,41 +39,27 @@
           </div>
 
           <div class="d-flex justify-content-center container">
-            <p class="barlow-semi-condensed-regular h3">Register to PCL</p>
+            <p class="barlow-semi-condensed-regular h3">Sign in to PCL</p>
           </div>
 
           <form class="d-flex flex-wrap m-3">
-            <div class="col-6 d-flex flex-wrap container-fluid form-outline mb-3">
-              <label for="firstname" class="inter form-label">First Name</label>
-              <input id="firstname" type="text" class="form-control">
-            </div>
-
-            <div class="col-6 d-flex flex-wrap container-fluid form-outline mb-3">
-              <label for="lastname" class="inter form-label">Last Name</label>
-              <input id="lastname" type="text" class="form-control">
-            </div>
-
             <div class="d-flex flex-wrap container-fluid form-outline mb-3">
               <label for="email-input" class="form-label">Email address</label>
               <input type="email" class="form-control" id="email-input">
             </div>
 
-            <div class="d-flex flex-wrap container-fluid form-outline mb-3">
+            <div class="d-flex flex-wrap container-fluid form-outline mb-5">
               <label for="password" class="form-label">Password</label>
               <input type="password" class="form-control" id="password">
             </div>
-
-            <div class="d-flex flex-wrap container-fluid form-outline mb-5">
-              <label for="confirm-pass" class="form-label">Confirm Password</label>
-              <input type="password" class="form-control" id="confirm-pass">
-            </div>
             
             <div class="d-flex flex-wrap container-fluid form-outline mb-3">
-              <button style="height: 3rem" type="submit" class="col-12 btn btn-dark">Register</button>
+              <button style="height: 3rem" type="submit" class="col-12 btn btn-dark">Sign In</button>
             </div>
+
             <div class="d-flex flex-wrap container-fluid form-outline mb-3">
-              <a href="#" class="barlow-light text-dark">Already have an account?</a>
-            </div>
+                <a href="#" class="barlow-light text-dark">Register Account</a>
+              </div>
           </form>
       </div>
   </div>
