changed initial to login, linked register

--- a/MyApp/src/Login/login.html
+++ b/MyApp/src/Login/login.html
@@ -58,7 +58,7 @@
             </div>
 
             <div class="d-flex flex-wrap container-fluid form-outline mb-3">
-                <a href="#" class="barlow-light text-dark">Register Account</a>
+                <a href="#" id="register-link" class="barlow-light text-dark">Register Account</a>
               </div>
           </form>
       </div>
@@ -69,6 +69,6 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
-  <script src="./script.js"></script>
+  <script src="../renderer.js"></script>
 </body>
 </html>
