--- a/MyApp/src/Home/home.html
+++ b/MyApp/src/Home/home.html
@@ -43,7 +43,10 @@
 
     <div style="flex: 1" class="bg-light container-fluid p-0">
         <div id="content" class="container-fluid d-flex justify-content-end">
-            <span id="subtitle" class="m-5 barlow-regular">Load Plan KPI</span>
+          <div class="m-5 d-flex flex-column align-items-end"> 
+            <button id="loadPlanBtn" type="button" class="btn btn-primary my-2">Load Plan</button>
+            <button id="kpiBtn" type="button" class="btn btn-primary my-2">KPI</button>
+            
         </div>
     </div>
 
