added link to menu

--- a/MyApp/src/Login/login.html
+++ b/MyApp/src/Login/login.html
@@ -54,7 +54,7 @@
             </div>
             
             <div class="d-flex flex-wrap container-fluid form-outline mb-3">
-              <button style="height: 3rem" type="submit" class="col-12 btn btn-dark">Sign In</button>
+              <button style="height: 3rem" id="signin-link" type="submit" class="col-12 btn btn-dark">Sign In</button>
             </div>
 
             <div class="d-flex flex-wrap container-fluid form-outline mb-3">
