--- a/MyApp/src/Register/register.html
+++ b/MyApp/src/Register/register.html
@@ -69,7 +69,7 @@
             </div>
             
             <div class="d-flex flex-wrap container-fluid form-outline mb-3">
-              <button style="height: 3rem" type="submit" class="col-12 btn btn-dark">Register</button>
+              <button style="height: 3rem" id="create-link"type="submit" class="col-12 btn btn-dark">Register</button>
             </div>
             <div class="d-flex flex-wrap container-fluid form-outline mb-3">
               <a href="#" class="barlow-light text-dark">Already have an account?</a>
@@ -83,6 +83,6 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
-  <script src="./script.js"></script>
+  <script src="../renderer.js"></script>
 </body>
 </html>
