--- a/MyApp/assets/navbar/navbar.html
+++ b/MyApp/assets/navbar/navbar.html
@@ -93,7 +93,7 @@ body {
           <a class="nav-link" href="../../../MyApp/src/Load Plan/upload.html">Load Plan</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">KPI</a>
+          <a class="nav-link" href="../../../MyApp/src/KPI/kpi.html">KPI</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="../../src/Login/login.html">Sign In</a>
