--- a/MyApp/src/Home/home.html
+++ b/MyApp/src/Home/home.html
@@ -54,6 +54,8 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
+  <script src="homeScript.js"></script>
+
   <script src="../renderer.js"></script>
 </body>
 </html>
