--- a/MyApp/src/Login/login.html
+++ b/MyApp/src/Login/login.html
@@ -69,6 +69,8 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
+  <script src="loginScript.js"></script>
   <script src="../renderer.js"></script>
+  
 </body>
 </html>
