--- a/MyApp/src/Register/register.html
+++ b/MyApp/src/Register/register.html
@@ -83,6 +83,6 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
-  <script src="../renderer.js"></script>
+  <script src="registerScript.js"></script>
 </body>
 </html>
