--- a/MyApp/src/Create/create.html
+++ b/MyApp/src/Create/create.html
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-    <div class="row row-cols-2 container-fluid justify-content-center flex-wrap d-flex mx-4">
+    <div class="row row-cols-2 container-fluid justify-content-center flex-wrap d-flex mt-4">
         <div class="container p-0 col-md-6 pb-5">
             <form class="row row-cols-2 gy-4 d-flex container justify-content-center">
                 <div class="col-md-4 d-flex justify-content-end">
