--- a/MyApp/src/Create/create.html
+++ b/MyApp/src/Create/create.html
@@ -49,56 +49,56 @@
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Plant</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="Plant"  type="text" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Sales Order</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="saleOrder" type="text" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white;" class="barlow-regular">Outbound Deliveries</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="outDevlieries" type="text" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Customer Name</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="customerName" type="text" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Vol</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="volume" type="text" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Weight</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="Weight"  type="text" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Ton</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="Ton" type="text" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Load Date</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="loadDate" type="text" class="form-control">
                 </div>
             </form>
         </div>
@@ -109,42 +109,42 @@
                     <label style="font-size:1.2em; color:white" class="barlow-regular">System Route</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="sysRoute" type="text" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">System Route Amount</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="sysRouteAmt" type="text" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Store Code</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="strCode" type="text" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Mix</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="Mix" type="text" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Window</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="window" type="text" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
-                    <label style="font-size:1.2em; color:white" class="barlow-regular">Weight Utilization</label>
+                    <label style="font-size:1.2em; color:white"  class="barlow-regular">Weight Utilization</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="weightUtil" type="text" class="form-control">
                 </div>
 
                 <button type="submit" id="save" class="btn col-md-6 mt-5">Save Load</button>
@@ -157,6 +157,6 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
-  <script src="../renderer.js"></script>
+  <script src="createScript.js"></script>
 </body>
 </html>
