--- a/MyApp/src/Edit/edit.html
+++ b/MyApp/src/Edit/edit.html
@@ -62,389 +62,10 @@
                     <th scope="col">Weight Utilization</th>
                 </tr>
             </thead>
-            <tbody class="barlow-light">
-                <tr>
-                <td colspan="2">
-                    <div class="px-1 d-flex justify-content-center">
-                    <a class="delete-btn" href="#">
-                        <i class="bi bi-x-square"></i>
-                    </a>
-                    </div>
-                </td>
-                <td>03/10/2024</td>
-                <td>ZL06</td>
-                <td>ZUEUUA</td>
-                <td>ZEUREE</td>
-                <td>12345612</td>
-                <td>19237</td>
-                <td>10023</td>
-                <td>1</td>
-                <td>Brianna Salvador</td>
-                <td>0.231</td>
-                <td>1.2302</td>
-                <td>4WT2</td>
-                <td>05/10/2024</td>
-                <td>02/10/2024 08:00</td>
-                <td>8:00:00 AM</td>
-                <td>16:00-19:00</td>
-                <td>12</td>
-                <td>90%</td>
-                </tr>
-                <tr>
-                <!-- Sample Data -->
-                <td colspan="2">
-                    <div class="px-1 d-flex justify-content-center">
-                    <a class="delete-btn" href="#">
-                        <i class="bi bi-x-square"></i>
-                    </a>
-                    </div>
-                </td>
-                <td>03/10/2024</td>
-                <td>ZL06</td>
-                <td>ZUEUUA</td>
-                <td>ZEUREE</td>
-                <td>12345612</td>
-                <td>19237</td>
-                <td>10023</td>
-                <td>1</td>
-                <td>Brianna Salvador</td>
-                <td>0.231</td>
-                <td>1.2302</td>
-                <td>4WT2</td>
-                <td>05/10/2024</td>
-                <td>02/10/2024 08:00</td>
-                <td>8:00:00 AM</td>
-                <td>16:00-19:00</td>
-                <td>12</td>
-                <td>90%</td>
-                </tr>
-                <tr>
-                <td colspan="2">
-                    <div class="px-1 d-flex justify-content-center">
-                    <a class="delete-btn" href="#">
-                        <i class="bi bi-x-square"></i>
-                    </a>
-                    </div>
-                </td>
-                <td>03/10/2024</td>
-                <td>ZL06</td>
-                <td>ZUEUUA</td>
-                <td>ZEUREE</td>
-                <td>12345612</td>
-                <td>19237</td>
-                <td>10023</td>
-                <td>1</td>
-                <td>Brianna Salvador</td>
-                <td>0.231</td>
-                <td>1.2302</td>
-                <td>4WT2</td>
-                <td>05/10/2024</td>
-                <td>02/10/2024 08:00</td>
-                <td>8:00:00 AM</td>
-                <td>16:00-19:00</td>
-                <td>12</td>
-                <td>90%</td>
-                </tr>
-                <tr>
-                <td colspan="2">
-                    <div class="px-1 d-flex justify-content-center">
-                    <a class="delete-btn" href="#">
-                        <i class="bi bi-x-square"></i>
-                    </a>
-                    </div>
-                </td>
-                <td>03/10/2024</td>
-                <td>ZL06</td>
-                <td>ZUEUUA</td>
-                <td>ZEUREE</td>
-                <td>12345612</td>
-                <td>19237</td>
-                <td>10023</td>
-                <td>1</td>
-                <td>Brianna Salvador</td>
-                <td>0.231</td>
-                <td>1.2302</td>
-                <td>4WT2</td>
-                <td>05/10/2024</td>
-                <td>02/10/2024 08:00</td>
-                <td>8:00:00 AM</td>
-                <td>16:00-19:00</td>
-                <td>12</td>
-                <td>90%</td>
-                </tr>
-                <tr>
-                <td colspan="2">
-                    <div class="px-1 d-flex justify-content-center">
-                    <a class="delete-btn" href="#">
-                        <i class="bi bi-x-square"></i>
-                    </a>
-                    </div>
-                </td>
-                <td>03/10/2024</td>
-                <td>ZL06</td>
-                <td>ZUEUUA</td>
-                <td>ZEUREE</td>
-                <td>12345612</td>
-                <td>19237</td>
-                <td>10023</td>
-                <td>1</td>
-                <td>Brianna Salvador</td>
-                <td>0.231</td>
-                <td>1.2302</td>
-                <td>4WT2</td>
-                <td>05/10/2024</td>
-                <td>02/10/2024 08:00</td>
-                <td>8:00:00 AM</td>
-                <td>16:00-19:00</td>
-                <td>12</td>
-                <td>90%</td>
-                </tr>
-                <tr>
-                <td colspan="2">
-                    <div class="px-1 d-flex justify-content-center">
-                    <a class="delete-btn" href="#">
-                        <i class="bi bi-x-square"></i>
-                    </a>
-                    </div>
-                </td>
-                <td>03/10/2024</td>
-                <td>ZL06</td>
-                <td>ZUEUUA</td>
-                <td>ZEUREE</td>
-                <td>12345612</td>
-                <td>19237</td>
-                <td>10023</td>
-                <td>1</td>
-                <td>Brianna Salvador</td>
-                <td>0.231</td>
-                <td>1.2302</td>
-                <td>4WT2</td>
-                <td>05/10/2024</td>
-                <td>02/10/2024 08:00</td>
-                <td>8:00:00 AM</td>
-                <td>16:00-19:00</td>
-                <td>12</td>
-                <td>90%</td>
-                </tr>
-                <tr>
-                <td colspan="2">
-                    <div class="px-1 d-flex justify-content-center">
-                    <a class="delete-btn" href="#">
-                        <i class="bi bi-x-square"></i>
-                    </a>
-                    </div>
-                </td>
-                <td>03/10/2024</td>
-                <td>ZL06</td>
-                <td>ZUEUUA</td>
-                <td>ZEUREE</td>
-                <td>12345612</td>
-                <td>19237</td>
-                <td>10023</td>
-                <td>1</td>
-                <td>Brianna Salvador</td>
-                <td>0.231</td>
-                <td>1.2302</td>
-                <td>4WT2</td>
-                <td>05/10/2024</td>
-                <td>02/10/2024 08:00</td>
-                <td>8:00:00 AM</td>
-                <td>16:00-19:00</td>
-                <td>12</td>
-                <td>90%</td>
-                </tr>
-                <tr>
-                <td colspan="2">
-                    <div class="px-1 d-flex justify-content-center">
-                    <a class="delete-btn" href="#">
-                        <i class="bi bi-x-square"></i>
-                    </a>
-                    </div>
-                </td>
-                <td>03/10/2024</td>
-                <td>ZL06</td>
-                <td>ZUEUUA</td>
-                <td>ZEUREE</td>
-                <td>12345612</td>
-                <td>19237</td>
-                <td>10023</td>
-                <td>1</td>
-                <td>Brianna Salvador</td>
-                <td>0.231</td>
-                <td>1.2302</td>
-                <td>4WT2</td>
-                <td>05/10/2024</td>
-                <td>02/10/2024 08:00</td>
-                <td>8:00:00 AM</td>
-                <td>16:00-19:00</td>
-                <td>12</td>
-                <td>90%</td>
-                </tr>
-                <tr>
-                <td colspan="2">
-                    <div class="px-1 d-flex justify-content-center">
-                    <a class="delete-btn" href="#">
-                        <i class="bi bi-x-square"></i>
-                    </a>
-                    </div>
-                </td>
-                <td>03/10/2024</td>
-                <td>ZL06</td>
-                <td>ZUEUUA</td>
-                <td>ZEUREE</td>
-                <td>12345612</td>
-                <td>19237</td>
-                <td>10023</td>
-                <td>1</td>
-                <td>Brianna Salvador</td>
-                <td>0.231</td>
-                <td>1.2302</td>
-                <td>4WT2</td>
-                <td>05/10/2024</td>
-                <td>02/10/2024 08:00</td>
-                <td>8:00:00 AM</td>
-                <td>16:00-19:00</td>
-                <td>12</td>
-                <td>90%</td>
-                </tr>
-                <tr>
-                <td colspan="2">
-                    <div class="px-1 d-flex justify-content-center">
-                    <a class="delete-btn" href="#">
-                        <i class="bi bi-x-square"></i>
-                    </a>
-                    </div>
-                </td>
-                <td>03/10/2024</td>
-                <td>ZL06</td>
-                <td>ZUEUUA</td>
-                <td>ZEUREE</td>
-                <td>12345612</td>
-                <td>19237</td>
-                <td>10023</td>
-                <td>1</td>
-                <td>Brianna Salvador</td>
-                <td>0.231</td>
-                <td>1.2302</td>
-                <td>4WT2</td>
-                <td>05/10/2024</td>
-                <td>02/10/2024 08:00</td>
-                <td>8:00:00 AM</td>
-                <td>16:00-19:00</td>
-                <td>12</td>
-                <td>90%</td>
-                </tr>
-                <tr>
-                <td colspan="2">
-                    <div class="px-1 d-flex justify-content-center">
-                    <a class="delete-btn" href="#">
-                        <i class="bi bi-x-square"></i>
-                    </a>
-                    </div>
-                </td>
-                <td>03/10/2024</td>
-                <td>ZL06</td>
-                <td>ZUEUUA</td>
-                <td>ZEUREE</td>
-                <td>12345612</td>
-                <td>19237</td>
-                <td>10023</td>
-                <td>1</td>
-                <td>Brianna Salvador</td>
-                <td>0.231</td>
-                <td>1.2302</td>
-                <td>4WT2</td>
-                <td>05/10/2024</td>
-                <td>02/10/2024 08:00</td>
-                <td>8:00:00 AM</td>
-                <td>16:00-19:00</td>
-                <td>12</td>
-                <td>90%</td>
-                </tr>
-                <tr>
-                <td colspan="2">
-                    <div class="px-1 d-flex justify-content-center">
-                    <a class="delete-btn" href="#">
-                        <i class="bi bi-x-square"></i>
-                    </a>
-                    </div>
-                </td>
-                <td>03/10/2024</td>
-                <td>ZL06</td>
-                <td>ZUEUUA</td>
-                <td>ZEUREE</td>
-                <td>12345612</td>
-                <td>19237</td>
-                <td>10023</td>
-                <td>1</td>
-                <td>Brianna Salvador</td>
-                <td>0.231</td>
-                <td>1.2302</td>
-                <td>4WT2</td>
-                <td>05/10/2024</td>
-                <td>02/10/2024 08:00</td>
-                <td>8:00:00 AM</td>
-                <td>16:00-19:00</td>
-                <td>12</td>
-                <td>90%</td>
-                </tr>
-                <tr>
-                <td colspan="2">
-                    <div class="px-1 d-flex justify-content-center">
-                    <a class="delete-btn" href="#">
-                        <i class="bi bi-x-square"></i>
-                    </a>
-                    </div>
-                </td>
-                <td>03/10/2024</td>
-                <td>ZL06</td>
-                <td>ZUEUUA</td>
-                <td>ZEUREE</td>
-                <td>12345612</td>
-                <td>19237</td>
-                <td>10023</td>
-                <td>1</td>
-                <td>Brianna Salvador</td>
-                <td>0.231</td>
-                <td>1.2302</td>
-                <td>4WT2</td>
-                <td>05/10/2024</td>
-                <td>02/10/2024 08:00</td>
-                <td>8:00:00 AM</td>
-                <td>16:00-19:00</td>
-                <td>12</td>
-                <td>90%</td>
-                </tr>
-                <tr>
-                <td colspan="2">
-                    <div class="px-1 d-flex justify-content-center">
-                    <a class="delete-btn" href="#">
-                        <i class="bi bi-x-square"></i>
-                    </a>
-                    </div>
-                </td>
-                <td>03/10/2024</td>
-                <td>ZL06</td>
-                <td>ZUEUUA</td>
-                <td>ZEUREE</td>
-                <td>12345612</td>
-                <td>19237</td>
-                <td>10023</td>
-                <td>1</td>
-                <td>Brianna Salvador</td>
-                <td>0.231</td>
-                <td>1.2302</td>
-                <td>4WT2</td>
-                <td>05/10/2024</td>
-                <td>02/10/2024 08:00</td>
-                <td>8:00:00 AM</td>
-                <td>16:00-19:00</td>
-                <td>12</td>
-                <td>90%</td>
-                </tr>
+            <tbody id="route-table-body" class="barlow-light">
+
             </tbody>
-        </table>
-    </div>
+                
 
     <div class="d-flex justify-content-between p-0 mx-4 mt-3">
         <div class="d-flex gap-3 justify-content-end">
@@ -471,6 +92,6 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
-  <script src="../renderer.js"></script>
+  <script src="editScript.js"></script>
 </body>
 </html>
