made sysRouteAmt red to be differentiable

--- a/MyApp/src/Create/create.html
+++ b/MyApp/src/Create/create.html
@@ -139,7 +139,7 @@
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
-                    <label style="font-size:1.2em; color:white" class="barlow-regular">System Route Amount</label>
+                    <label style="font-size:1.2em; color:red" class="barlow-regular">System Route Amount</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
                     <input style="height:fit-content; width:20em" id="sysRouteAmt" type="text" class="form-control">
