--- a/MyApp/assets/navbar/navbar.html
+++ b/MyApp/assets/navbar/navbar.html
@@ -102,6 +102,9 @@ body {
           <a class="nav-link" href="../../../MyApp/src/KPI/kpi.html">KPI</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="../../../MyApp/src/Profile/profile.html">Profile</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="../../src/Login/login.html">Sign In</a>
         </li>
         <li class="nav-item">
