--- a/MyApp/src/KPI/kpi.html
+++ b/MyApp/src/KPI/kpi.html
@@ -48,10 +48,10 @@
     
                     <tbody class="barlow-light">
                         <tr>
-                            <td>03/23/2024</td>
-                            <td id="hitCount">12</td>
-                            <td id="missCount">55</td>
-                            <td id="hmRatio">94.34%</td>
+                            <td id="date"></td>
+                            <td id="hitCount">0</td>
+                            <td id="missCount">0</td>
+                            <td id="hmRatio">NaN%</td>
                         </tr>
                     </tbody>
                 </table>
@@ -80,13 +80,14 @@
                     <span id="title" style="color:#FA0203" class="krona-one-regular">KPI</span>
                     <span id="title" style="color:white" class="krona-one-regular">Menu</span>
                 </div>
-
+    <!--
                 <button id="addRouteBtn" type="button" class="my-2 d-flex justify-content-center align-items-center p-2 px-3 btn btn-light barlow-regular">
                     <span class="me-auto pe-1"><i class="h4 bi bi-plus-square"></i></span>
                     <div class="container">
                         Add Route Info
                     </div>
                 </button>
+    -->
                 <button id="saveBtn" type="button" class="my-3 d-flex justify-content-center align-items-center p-2 px-3 btn btn-light barlow-regular">
                     <span class="me-auto pe-1"><i class="h4 bi bi-save"></i></span>
                     <div class="container">
