added "add routes" button

--- a/MyApp/src/Edit/edit.html
+++ b/MyApp/src/Edit/edit.html
@@ -72,6 +72,9 @@
             <button id="options" data-bs-toggle="modal" data-bs-target="#filter-options" class="p-2 px-3 btn btn-light barlow-regular">
                 Edit Existing Routes
             </button>
+            <button id="add" data-bs-toggle="modal" data-bs-target="#filter-options" class="p-2 px-3 btn btn-light barlow-regular">
+                Add Routes
+            </button>
             <button id="kpi" data-bs-toggle="modal" data-bs-target="#filter-options" class="p-2 px-3 btn btn-light barlow-regular">
                 KPI Analysis
             </button>
