removed automated SEQ count due to bugs

--- a/MyApp/src/Create/create.html
+++ b/MyApp/src/Create/create.html
@@ -180,6 +180,12 @@
                 <div class="align-items-center d-flex col-md-8">
                     <input style="height:fit-content; width:20em" id="weightUtil" type="text" class="form-control">
                 </div>
+                <div class="col-md-4 d-flex justify-content-end">
+                    <label style="font-size:1.2em; color:white"  class="barlow-regular">SEQ</label>
+                </div>
+                <div class="align-items-center d-flex col-md-8">
+                    <input style="height:fit-content; width:20em" id="SEQe" type="text" class="form-control">
+                </div>
 
                 <button type="submit" id="save" class="btn col-md-6 mt-5">Save Load</button>
             </form>
