--- a/MyApp/src/Register/register.html
+++ b/MyApp/src/Register/register.html
@@ -19,7 +19,7 @@
     <!-- Include this for navbar -->
     <script>
       function loadNavbar() {
-          fetch('../../assets/navbar/navbar.html')
+          fetch('../../assets/navbar/navbarLogin.html')
               .then(response => response.text())
               .then(data => {
                   document.getElementById('navbar').innerHTML = data;
