changed input types to appopriate ones

--- a/MyApp/src/Create/create.html
+++ b/MyApp/src/Create/create.html
@@ -117,7 +117,7 @@
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Load Date</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" id="loadDate" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="loadDate" type="date" class="form-control">
                 </div>
             </form>
         </div>
@@ -149,29 +149,35 @@
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Mix</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" id="Mix" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="Mix" type="datetime-local" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Call Time</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" id="callTime" type="text" class="form-control">
+                    <input type="time" style="height:fit-content; width:20em" id="callTime" class="form-control">
                 </div>
 
 
                 <div class="col-md-4 d-flex justify-content-end">
-                    <label style="font-size:1.2em; color:white" class="barlow-regular">Window</label>
+                    <label style="font-size:1.2em; color:white" class="barlow-regular">Window Start</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" id="window" type="text" class="form-control">
+                    <input type="time" style="height:fit-content; width:20em" id="windowStart" class="form-control">
+                </div>
+                <div class="col-md-4 d-flex justify-content-end">
+                    <label style="font-size:1.2em; color:white" class="barlow-regular">Window End</label>
+                </div>
+                <div class="align-items-center d-flex col-md-8">
+                    <input style="height:fit-content; width:20em" id="windowEnd" type="time" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Drop</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" id="drop" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="drop" type="number" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
@@ -184,7 +190,7 @@
                     <label style="font-size:1.2em; color:white"  class="barlow-regular">SEQ</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" id="SEQe" type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="SEQe" type="number" class="form-control">
                 </div>
 
                 <button type="submit" id="save" class="btn col-md-6 mt-5">Save Load</button>
