refactor of loadplan

--- a/MyApp/src/Create/create.html
+++ b/MyApp/src/Create/create.html
@@ -106,19 +106,7 @@
                     <input style="height:fit-content; width:20em" id="Weight"  type="text" class="form-control">
                 </div>
 
-                <div class="col-md-4 d-flex justify-content-end">
-                    <label style="font-size:1.2em; color:white" class="barlow-regular">Ton</label>
-                </div>
-                <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" id="Ton" type="text" class="form-control">
-                </div>
 
-                <div class="col-md-4 d-flex justify-content-end">
-                    <label style="font-size:1.2em; color:white" class="barlow-regular">Load Date</label>
-                </div>
-                <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" id="loadDate" type="date" class="form-control">
-                </div>
             </form>
         </div>
 
@@ -146,21 +134,6 @@
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
-                    <label style="font-size:1.2em; color:white" class="barlow-regular">Mix</label>
-                </div>
-                <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" id="Mix" type="datetime-local" class="form-control">
-                </div>
-
-                <div class="col-md-4 d-flex justify-content-end">
-                    <label style="font-size:1.2em; color:white" class="barlow-regular">Call Time</label>
-                </div>
-                <div class="align-items-center d-flex col-md-8">
-                    <input type="time" style="height:fit-content; width:20em" id="callTime" class="form-control">
-                </div>
-
-
-                <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Window Start</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
@@ -180,17 +153,12 @@
                     <input style="height:fit-content; width:20em" id="drop" type="number" class="form-control">
                 </div>
 
-                <div class="col-md-4 d-flex justify-content-end">
-                    <label style="font-size:1.2em; color:white"  class="barlow-regular">Weight Utilization</label>
-                </div>
-                <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" id="weightUtil" type="text" class="form-control">
-                </div>
+       
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white"  class="barlow-regular">SEQ</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" id="SEQe" type="number" class="form-control">
+                    <input style="height:fit-content; width:20em" id="SEQe" type="text" class="form-control">
                 </div>
 
                 <button type="submit" id="save" class="btn col-md-6 mt-5">Save Load</button>
