--- a/MyApp/src/Home/home.html
+++ b/MyApp/src/Home/home.html
@@ -44,7 +44,8 @@
     <div style="flex: 1" class="bg-light container-fluid p-0">
         <div id="content" class="container-fluid d-flex justify-content-end">
           <div class="d-flex flex-column align-items-end"> 
-            <button id="loadPlanBtn" type="button" class="btn btn-primary mt-2">Load Plan</button>
+            <button id="loadPlanBtn" type="button" class="btn btn-primary mt-2">Create Load Plan</button>
+           
             <button id="kpiBtn" type="button" class="btn btn-primary mt-1">KPI</button>
         </div>
     </div>
