Adding SEQ option in Finalize

--- a/MyApp/src/Finalize/finalize.html
+++ b/MyApp/src/Finalize/finalize.html
@@ -53,10 +53,7 @@
                 </div>
                 <div class="align-items-center d-flex col-md-8">
                     <select style="height:fit-content; width:20em" id="seq" class="form-control">
-                        <option value="SEQ1">SEQ1</option>
-                        <option value="SEQ2">SEQ2</option>
-                        <option value="SEQ3">SEQ3</option>
-                        <!-- Add more options as needed -->
+                        <!-- Options will be populated dynamically -->
                     </select>
                 </div>
                 
