Added functionality to SEQ & fields, added finalEdit module

--- a/MyApp/src/Finalize/finalize.html
+++ b/MyApp/src/Finalize/finalize.html
@@ -92,10 +92,10 @@
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
-                    <label style="font-size:1.2em; color:white" class="barlow-regular">Weight</label>
+                    <label style="font-size:1.2em; color:white" class="barlow-regular">Weight Utilization</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" id="drop" type="weight" class="form-control">
+                    <input style="height:fit-content; width:20em" id="weightUtilization" class="form-control">
                 </div>
 
                 <button type="submit" id="save" class="btn col-md-6 mt-5">Save Load</button>
