load plan finalization

--- a/MyApp/src/FinalizeEdit/finalEdit.html
+++ b/MyApp/src/FinalizeEdit/finalEdit.html
@@ -53,6 +53,7 @@
                     <th scope="col">Customer Name</th>
                     <th scope="col">Vol</th>
                     <th scope="col">Weight</th>
+                    <th scope="col">Ton</th>
                     <th scope="col">Window</th>
                     <th scope="col">DROP</th>
                     <th scope="col">Load Date</th>
