optimization and exportation of CSV

--- a/MyApp/src/Create/create.html
+++ b/MyApp/src/Create/create.html
@@ -103,7 +103,7 @@
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Weight</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" id="Weight"  type="text" class="form-control">
+                    <input style="height:fit-content; width:20em" id="weight"  type="text" class="form-control">
                 </div>
 
 
