--- a/MyApp/src/Finalize/finalize.html
+++ b/MyApp/src/Finalize/finalize.html
@@ -67,10 +67,10 @@
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Load Date</label>
                 </div>
-
                 <div class="align-items-center d-flex col-md-8">
                     <input type="datetime-local" style="height:fit-content; width:20em" id="loaddate"  type="text" class="form-control">
                 </div>
+
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Mix</label>
                 </div>
@@ -88,7 +88,7 @@
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Call Time</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input type="time" style="height:fit-content; width:20em" id="callTime" class="form-control">
+                    <input type="time" style="height:fit-content; width:20em" id="calltime" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
