--- a/MyApp/src/FinalizeEdit/finalEdit.html
+++ b/MyApp/src/FinalizeEdit/finalEdit.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="d-flex justify-content-start">
-            <button id="Confirm" type="button" class="btn btn-light">
+            <button id="Save" type="button" class="btn btn-light">
                 <i class="me-1 bi bi-floppy"></i>
                 Confirm Details</button>
         </div>
