Initial total weight and total volume function, finalize edit optimization

--- a/MyApp/src/Finalize/finalize.html
+++ b/MyApp/src/Finalize/finalize.html
@@ -37,12 +37,29 @@
     
     <div class="container-fluid d-flex flex-wrap justify-content-start my-3">
         <div class="contianer-fluid">
-            <span id="title" style="color:#FA0203" class="krona-one-regular">Load Plan</span>
+            <span id="title" style="color:#FA0203" class="krona-one-regular">SEQ GROUP</span>
         </div>
         <div class="container-fluid d-flex p-0">
-            <span id="title" style="color:white" class="krona-one-regular">Creation</span>
+            <span id="title" style="color:white" class="krona-one-regular">Edit</span>
         </div>
     </div>
+
+    <table class="mt-2 table text-center">
+        <thead>
+            <tr id="header" style="font-size:large;" class="barlow-regular">
+                <td>Total Volume</td>
+                <td>Total Weight</td>
+            </tr>
+        </thead>
+
+        <tbody class="barlow-light">
+            <tr>
+                <td id="totalVolume"></td>
+                <td id="totalWeight"></td>
+
+            </tr>
+        </tbody>
+    </table>
 
     <div class="row row-cols-2 container-fluid justify-content-center flex-wrap d-flex mt-4">
         <div class="container p-0 col-md-6 pb-5">
