--- a/MyApp/src/FinalizeEdit/finalEdit.html
+++ b/MyApp/src/FinalizeEdit/finalEdit.html
@@ -70,6 +70,9 @@
 
     <div class="d-flex justify-content-between p-0 mx-4 mt-3">
         <div class="d-flex gap-3 justify-content-end">
+            <button id="Back" data-bs-toggle="modal" data-bs-target="#filter-options" class="p-2 px-3 btn btn-light barlow-regular">
+                SEQ Group Edit
+            </button>
             <button id="kpi" data-bs-toggle="modal" data-bs-target="#filter-options" class="p-2 px-3 btn btn-light barlow-regular">
                 KPI Analysis
             </button>
