--- a/MyApp/src/Finalize/finalize.html
+++ b/MyApp/src/Finalize/finalize.html
@@ -63,8 +63,20 @@
                         </tr>
                     </tbody>
                 </table>
+                <table class="mt-2 table text-center">
+                    <thead>
+                        <tr id="routesTableHeader" style="font-size:large;" class="barlow-regular">
+                            <td>Volume</td>
+                            <td>Weight</td>
+                        </tr>
+                    </thead>
+                    <tbody id="routesTableBody" class="barlow-light">
+                        <!-- Rows will be populated dynamically -->
+                    </tbody>
+                </table>
             </div>
-    
+
+
             <form class="row row-cols-2 gy-4 d-flex container justify-content-center">
 
                 <div class="col-md-4 d-flex justify-content-end">
@@ -87,14 +99,14 @@
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Load Date</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input type="datetime-local" style="height:fit-content; width:20em" id="loaddate"  type="text" class="form-control">
+                    <input type="date" style="height:fit-content; width:20em" id="loaddate"  type="text" class="form-control">
                 </div>
 
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Mix</label>
                 </div>
                 <div class="align-items-center d-flex col-md-8">
-                    <input style="height:fit-content; width:20em" id="mix" class="form-control">
+                    <input  type="datetime-local" style="height:fit-content; width:20em" id="mix" class="form-control">
                 </div>
                 <div class="col-md-4 d-flex justify-content-end">
                     <label style="font-size:1.2em; color:white" class="barlow-regular">Call Time</label>
@@ -113,9 +125,9 @@
                 <button type="submit" id="save" class="btn col-md-6 mt-5">Save Load</button>
 
             </form>
-        </div>
     </div>
-
+    
+</div>
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
