KPI menu and buttons fixed
align items start

--- a/MyApp/src/KPI/kpi.html
+++ b/MyApp/src/KPI/kpi.html
@@ -34,7 +34,7 @@
     <div id="navbar"></div>
 
     <div style="flex:1" class="container-fluid d-flex justify-content-center align-items-center">
-        <div class="m-0 p-0 gap-4 container-fluid d-flex justify-content-center align-items-center">
+        <div class="m-0 p-0 gap-4 container-fluid d-flex justify-content-center align-items-start">
             <div style="width:50rem" class="p-3 rounded-2 d-flex justify-content-center flex-wrap bg-white">
                 <table class="mt-2 table text-center">
                     <thead>
@@ -75,7 +75,7 @@
                 </table>
             </div>
 
-            <div class="d-flex flex-column align-items-start me-4">
+            <div class="d-flex flex-column align-items-start me-4" style="flex-shrink: 0;">
                 <span id="title" style="color:#FA0203" class="krona-one-regular">KPI</span>
                 <span id="title" style="color:white" class="krona-one-regular">Menu</span>
                 <button id="saveBtn" type="button" class="my-3 d-flex justify-content-center align-items-center p-2 px-3 btn btn-light barlow-regular">
@@ -87,7 +87,6 @@
                     <div class="container">Exit to Menu</div>
                 </button>
             </div>
-        </button>
       </div>
         </div>
     </div>
